src/app/globals.css
@import 'tailwindcss';
@import 'tw-animate-css';
@plugin '@tailwindcss/typography';

@custom-variant dark (&:is(.dark *));

:root {
    --background: oklch(0.9689 0.009 314.7819);
    --foreground: oklch(0.3729 0.0306 259.7328);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.3729 0.0306 259.7328);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.3729 0.0306 259.7328);
    --primary: oklch(0.709 0.1592 293.5412);
    --primary-foreground: oklch(1 0 0);
    --secondary: oklch(0.9073 0.053 306.0902);
    --secondary-foreground: oklch(0.4461 0.0263 256.8018);
    --muted: oklch(0.9464 0.0327 307.1745);
    --muted-foreground: oklch(0.551 0.0234 264.3637);
    --accent: oklch(0.9376 0.026 321.9388);
    --accent-foreground: oklch(0.3729 0.0306 259.7328);
    --destructive: oklch(0.8077 0.1035 19.5706);
    --destructive-foreground: oklch(1 0 0);
    --border: oklch(0.9073 0.053 306.0902);
    --input: oklch(0.9073 0.053 306.0902);
    --ring: oklch(0.709 0.1592 293.5412);
    --chart-1: oklch(0.709 0.1592 293.5412);
    --chart-2: oklch(0.6056 0.2189 292.7172);
    --chart-3: oklch(0.5413 0.2466 293.009);
    --chart-4: oklch(0.4907 0.2412 292.5809);
    --chart-5: oklch(0.432 0.2106 292.7591);
    --sidebar: oklch(0.9073 0.053 306.0902);
    --sidebar-foreground: oklch(0.3729 0.0306 259.7328);
    --sidebar-primary: oklch(0.709 0.1592 293.5412);
    --sidebar-primary-foreground: oklch(1 0 0);
    --sidebar-accent: oklch(0.9376 0.026 321.9388);
    --sidebar-accent-foreground: oklch(0.3729 0.0306 259.7328);
    --sidebar-border: oklch(0.9073 0.053 306.0902);
    --sidebar-ring: oklch(0.709 0.1592 293.5412);
    --font-sans: Open Sans, sans-serif;
    --font-serif: Source Serif 4, serif;
    --font-mono: IBM Plex Mono, monospace;
    --radius: 1.5rem;
    --shadow-2xs: 0px 8px 16px -4px hsl(0 0% 0% / 0.04);
    --shadow-xs: 0px 8px 16px -4px hsl(0 0% 0% / 0.04);
    --shadow-sm: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 1px 2px -5px hsl(0 0% 0% / 0.08);
    --shadow: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 1px 2px -5px hsl(0 0% 0% / 0.08);
    --shadow-md: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 2px 4px -5px hsl(0 0% 0% / 0.08);
    --shadow-lg: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 4px 6px -5px hsl(0 0% 0% / 0.08);
    --shadow-xl: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 8px 10px -5px hsl(0 0% 0% / 0.08);
    --shadow-2xl: 0px 8px 16px -4px hsl(0 0% 0% / 0.2);
    --tracking-normal: 0em;
    --spacing: 0.25rem;
}

.dark {
    --background: oklch(0.2223 0.006 271.1393);
    --foreground: oklch(0.9551 0 0);
    --card: oklch(0.2568 0.0076 274.6528);
    --card-foreground: oklch(0.9551 0 0);
    --popover: oklch(0.2568 0.0076 274.6528);
    --popover-foreground: oklch(0.9551 0 0);
    --primary: oklch(0.6132 0.2294 291.7437);
    --primary-foreground: oklch(1 0 0);
    --secondary: oklch(0.294 0.013 272.9312);
    --secondary-foreground: oklch(0.9551 0 0);
    --muted: oklch(0.294 0.013 272.9312);
    --muted-foreground: oklch(0.7058 0 0);
    --accent: oklch(0.2795 0.0368 260.031);
    --accent-foreground: oklch(0.7857 0.1153 246.6596);
    --destructive: oklch(0.7106 0.1661 22.2162);
    --destructive-foreground: oklch(1 0 0);
    --border: oklch(0.3289 0.0092 268.3843);
    --input: oklch(0.3289 0.0092 268.3843);
    --ring: oklch(0.6132 0.2294 291.7437);
    --chart-1: oklch(0.8003 0.1821 151.711);
    --chart-2: oklch(0.6132 0.2294 291.7437);
    --chart-3: oklch(0.8077 0.1035 19.5706);
    --chart-4: oklch(0.6691 0.1569 260.1063);
    --chart-5: oklch(0.7058 0 0);
    --sidebar: oklch(0.2011 0.0039 286.0396);
    --sidebar-foreground: oklch(0.9551 0 0);
    --sidebar-primary: oklch(0.6132 0.2294 291.7437);
    --sidebar-primary-foreground: oklch(1 0 0);
    --sidebar-accent: oklch(0.294 0.013 272.9312);
    --sidebar-accent-foreground: oklch(0.6132 0.2294 291.7437);
    --sidebar-border: oklch(0.3289 0.0092 268.3843);
    --sidebar-ring: oklch(0.6132 0.2294 291.7437);
    --font-sans: Plus Jakarta Sans, sans-serif;
    --font-serif: Lora, serif;
    --font-mono: IBM Plex Mono, monospace;
    --radius: 1.4rem;
    --shadow-2xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
    --shadow-xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
    --shadow-sm: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 1px 2px -1px hsl(0 0% 0% / 0.16);
    --shadow: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 1px 2px -1px hsl(0 0% 0% / 0.16);
    --shadow-md: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 2px 4px -1px hsl(0 0% 0% / 0.16);
    --shadow-lg: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 4px 6px -1px hsl(0 0% 0% / 0.16);
    --shadow-xl: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 8px 10px -1px hsl(0 0% 0% / 0.16);
    --shadow-2xl: 0px 2px 3px 0px hsl(0 0% 0% / 0.4);
}

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --color-card: var(--card);
    --color-card-foreground: var(--card-foreground);
    --color-popover: var(--popover);
    --color-popover-foreground: var(--popover-foreground);
    --color-primary: var(--primary);
    --color-primary-foreground: var(--primary-foreground);
    --color-secondary: var(--secondary);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-muted: var(--muted);
    --color-muted-foreground: var(--muted-foreground);
    --color-accent: var(--accent);
    --color-accent-foreground: var(--accent-foreground);
    --color-destructive: var(--destructive);
    --color-destructive-foreground: var(--destructive-foreground);
    --color-border: var(--border);
    --color-input: var(--input);
    --color-ring: var(--ring);
    --color-chart-1: var(--chart-1);
    --color-chart-2: var(--chart-2);
    --color-chart-3: var(--chart-3);
    --color-chart-4: var(--chart-4);
    --color-chart-5: var(--chart-5);
    --color-sidebar: var(--sidebar);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-ring: var(--sidebar-ring);

    --font-sans: var(--font-sans);
    --font-mono: var(--font-mono);
    --font-serif: var(--font-serif);

    --radius-sm: calc(var(--radius) - 4px);
    --radius-md: calc(var(--radius) - 2px);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) + 4px);

    --shadow-2xs: var(--shadow-2xs);
    --shadow-xs: var(--shadow-xs);
    --shadow-sm: var(--shadow-sm);
    --shadow: var(--shadow);
    --shadow-md: var(--shadow-md);
    --shadow-lg: var(--shadow-lg);
    --shadow-xl: var(--shadow-xl);
    --shadow-2xl: var(--shadow-2xl);
}

@layer base {
    * {
        @apply border-border outline-ring/50;
    }
    body {
        @apply bg-background text-foreground;
        letter-spacing: var(--tracking-normal);
    }
}

button:not(:disabled) {
    @apply cursor-pointer;
}

/* 代碼塊行數樣式 */
code {
    counter-reset: line;
}

code > [data-line]::before {
    counter-increment: line;
    content: counter(line);

    /* 行數樣式 */
    display: inline-block;
    width: 1rem;
    margin-right: 2rem;
    text-align: right;
    color: rgba(115, 138, 148, 0.4);
}

code[data-line-numbers-max-digits='1'] > [data-line]::before {
    width: 1rem;
}

code[data-line-numbers-max-digits='2'] > [data-line]::before {
    width: 2rem;
}

code[data-line-numbers-max-digits='3'] > [data-line]::before {
    width: 3rem;
}

/* 深色模式下的行數樣式 */
.dark code > [data-line]::before {
    color: rgba(148, 163, 184, 0.4);
}

